force-app/main/default/objects/Product2/fields/ATM_Fee_in_other_currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_other_currencies__c</fullName>
    <label>ATM Fee in other currencies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>